Added Adaptive Histogram Equalization code. Completed RR-1 and RR-3 image processing.

--- a/RR3_Data_Exploration.ipynb
+++ b/RR3_Data_Exploration.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -35,9 +19,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "! pip install dask"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -45,11 +27,10 @@
         "id": "n-ym-0Yk-g8_",
         "outputId": "f84d091f-78d9-4d1c-cec9-8929aeaac778"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: dask in /usr/local/lib/python3.10/dist-packages (2024.10.0)\n",
             "Requirement already satisfied: click>=8.1 in /usr/local/lib/python3.10/dist-packages (from dask) (8.1.7)\n",
@@ -64,73 +45,73 @@
             "Requirement already satisfied: locket in /usr/local/lib/python3.10/dist-packages (from partd>=1.4.0->dask) (1.0.0)\n"
           ]
         }
+      ],
+      "source": [
+        "! pip install dask"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import dask.array as da\n",
-        "from dask import delayed\n"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "kQpcxTwn-mA6"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import dask.array as da\n",
+        "from dask import delayed\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "2guxkhIwnARd"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import gzip\n",
         "import zipfile\n",
         "import requests\n",
         "import matplotlib.pyplot as plt"
-      ],
-      "metadata": {
-        "id": "2guxkhIwnARd"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Data Download"
-      ],
       "metadata": {
         "id": "brN4vJFrnEIW"
-      }
+      },
+      "source": [
+        "## Data Download"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "base_url = \"https://osdr.nasa.gov/osdr/data/osd/files/352.7\"\n",
-        "headers = {\"Accept\": \"application/json\"}"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "zmxyk_aqnB2I"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "base_url = \"https://osdr.nasa.gov/osdr/data/osd/files/352.7\"\n",
+        "headers = {\"Accept\": \"application/json\"}"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "response = requests.get(base_url, headers=headers)"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "ou5UkYK5nE2b"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "response = requests.get(base_url, headers=headers)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if response.status_code == 200:\n",
-        "    print(\"Success\")"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -138,75 +119,37 @@
         "id": "Y3uRSuXhnGrp",
         "outputId": "d394efc8-61c9-4f90-f1af-937fe222b29e"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Success\n"
           ]
         }
+      ],
+      "source": [
+        "if response.status_code == 200:\n",
+        "    print(\"Success\")"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "b_jlQnh6nIJi"
+      },
+      "outputs": [],
       "source": [
         "data = response.json()\n",
         "studies = data.get(\"studies\", {})\n",
         "osd_study = studies.get(\"OSD-352\", {})\n",
         "study_files = osd_study.get(\"study_files\", [])"
-      ],
-      "metadata": {
-        "id": "b_jlQnh6nIJi"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if os.path.exists('rr3_dataset/csvs') and os.path.exists('rr3_dataset/input'):\n",
-        "  print(\"Both directories exist. Skipping download.\")\n",
-        "else:\n",
-        "  print(\"Directories missing. Running the download script.\")\n",
-        "\n",
-        "  for file in study_files:\n",
-        "      if file.get('file_name').endswith('.csv'):\n",
-        "          print(file.get('file_name'))\n",
-        "          file_name = file.get('file_name')\n",
-        "          file_url = f\"https://osdr.nasa.gov{file.get('remote_url')}\"\n",
-        "          print(f\"Downloading: {file_name}\")\n",
-        "\n",
-        "          save_dir = 'rr3_dataset/csvs'\n",
-        "          os.makedirs(save_dir, exist_ok=True)\n",
-        "\n",
-        "          file_response = requests.get(file_url)\n",
-        "          if file_response.status_code == 200:\n",
-        "              file_path = os.path.join('rr3_dataset/csvs', file_name)\n",
-        "              with open(file_path, \"wb\") as f:\n",
-        "                  f.write(file_response.content)\n",
-        "              print(f\"Saved: {file_path}\\n\")\n",
-        "          else:\n",
-        "              print(f\"Failed to download {file_name}: {file_response.status_code}\\n\")\n",
-        "      if file.get('file_name').endswith('.jpg'):\n",
-        "          print(file.get('file_name'))\n",
-        "          file_name = file.get('file_name')\n",
-        "          file_url = f\"https://osdr.nasa.gov{file.get('remote_url')}\"\n",
-        "          print(f\"Downloading: {file_name}\")\n",
-        "\n",
-        "          save_dir = 'rr3_dataset/input'\n",
-        "          os.makedirs(save_dir, exist_ok=True)\n",
-        "\n",
-        "          file_response = requests.get(file_url)\n",
-        "          if file_response.status_code == 200:\n",
-        "              file_path = os.path.join('rr3_dataset/input', file_name)\n",
-        "              with open(file_path, \"wb\") as f:\n",
-        "                  f.write(file_response.content)\n",
-        "              print(f\"Saved: {file_path}\\n\")\n",
-        "          else:\n",
-        "              print(f\"Failed to download {file_name}: {file_response.status_code}\\n\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -214,11 +157,10 @@
         "id": "4algR-zHnJpv",
         "outputId": "253a8f9a-e321-4140-f4fe-9bd11ff5789b"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Directories missing. Running the download script.\n",
             "GLDS-352_snATAC-Seq_CG9_per_barcode_metrics.csv\n",
@@ -257,19 +199,87 @@
             "Downloading: GLDS-352_SpatialTranscriptomics_NASA-RR3_Sample_304_A1.jpg\n"
           ]
         }
+      ],
+      "source": [
+        "if os.path.exists('rr3_dataset/csvs') and os.path.exists('rr3_dataset/img_input') and os.path.exists('rr3_dataset/tiff_input'):\n",
+        "    print(\"All directories exist. Skipping download.\")\n",
+        "else:\n",
+        "    print(\"Some directories are missing. Running the download script.\")\n",
+        "\n",
+        "    # Check and download CSV files only if the 'csvs' directory is missing\n",
+        "    if not os.path.exists('rr3_dataset/csvs'):\n",
+        "        for file in study_files:\n",
+        "            if file.get('file_name').endswith('.csv'):\n",
+        "                file_name = file.get('file_name')\n",
+        "                file_url = f\"https://osdr.nasa.gov{file.get('remote_url')}\"\n",
+        "\n",
+        "                save_dir = 'rr3_dataset/csvs'\n",
+        "                os.makedirs(save_dir, exist_ok=True)\n",
+        "\n",
+        "                file_response = requests.get(file_url)\n",
+        "                if file_response.status_code == 200:\n",
+        "                    file_path = os.path.join(save_dir, file_name)\n",
+        "                    with open(file_path, \"wb\") as f:\n",
+        "                        f.write(file_response.content)\n",
+        "                    print(f\"Saved: {file_path}\\n\")\n",
+        "                else:\n",
+        "                    print(f\"Failed to download {file_name}: {file_response.status_code}\\n\")\n",
+        "\n",
+        "    # Check and download JPG files only if the 'img_input' directory is missing\n",
+        "    if not os.path.exists('rr3_dataset/img_input'):\n",
+        "        for file in study_files:\n",
+        "            if file.get('file_name').endswith('.jpg'):\n",
+        "                file_name = file.get('file_name')\n",
+        "                file_url = f\"https://osdr.nasa.gov{file.get('remote_url')}\"\n",
+        "\n",
+        "                save_dir = 'rr3_dataset/img_input'\n",
+        "                os.makedirs(save_dir, exist_ok=True)\n",
+        "\n",
+        "                file_response = requests.get(file_url)\n",
+        "                if file_response.status_code == 200:\n",
+        "                    file_path = os.path.join(save_dir, file_name)\n",
+        "                    with open(file_path, \"wb\") as f:\n",
+        "                        f.write(file_response.content)\n",
+        "                    print(f\"Saved: {file_path}\\n\")\n",
+        "                else:\n",
+        "                    print(f\"Failed to download {file_name}: {file_response.status_code}\\n\")\n",
+        "\n",
+        "    # Check and download TIFF files only if the 'tiff_input' directory is missing\n",
+        "    if not os.path.exists('rr3_dataset/tiff_input'):\n",
+        "        for file in study_files:\n",
+        "            if file.get('file_name').endswith('.tiff'):\n",
+        "                file_name = file.get('file_name')\n",
+        "                file_url = f\"https://osdr.nasa.gov{file.get('remote_url')}\"\n",
+        "\n",
+        "                save_dir = 'rr3_dataset/tiff_input'\n",
+        "                os.makedirs(save_dir, exist_ok=True)\n",
+        "\n",
+        "                file_response = requests.get(file_url)\n",
+        "                if file_response.status_code == 200:\n",
+        "                    file_path = os.path.join(save_dir, file_name)\n",
+        "                    with open(file_path, \"wb\") as f:\n",
+        "                        f.write(file_response.content)\n",
+        "                    print(f\"Saved: {file_path}\\n\")\n",
+        "                else:\n",
+        "                    print(f\"Failed to download {file_name}: {file_response.status_code}\\n\")\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Image Labeling"
-      ],
       "metadata": {
         "id": "xJpK4jujr6bZ"
-      }
+      },
+      "source": [
+        "## Image Labeling"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "q080O-5znL25"
+      },
+      "outputs": [],
       "source": [
         "rr3_label_dict = {\n",
         "    'GLDS-352_SpatialTranscriptomics_NASA-RR3_Sample_158_A1.jpg': 'Space Flight',\n",
@@ -289,24 +299,24 @@
         "rr3_labels = pd.DataFrame(list(rr3_label_dict.items()), columns=['image_file_path', 'label'])\n",
         "\n",
         "rr3_labels.head()"
-      ],
-      "metadata": {
-        "id": "q080O-5znL25"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Image Preprocessing"
-      ],
       "metadata": {
         "id": "awHG-gUgsDN6"
-      }
+      },
+      "source": [
+        "## Image Preprocessing"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qqjjKvZjtYGd"
+      },
+      "outputs": [],
       "source": [
         "folder_path = 'rr3_dataset/input'\n",
         "\n",
@@ -321,60 +331,60 @@
         "                print(f\"{file_name}, Dimensions: {width}x{height}\")\n",
         "        except Exception as e:\n",
         "            print(f\"Error processing {file_name}: {e}\")"
-      ],
-      "metadata": {
-        "id": "qqjjKvZjtYGd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "rr3_labels.head()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XPPHC9uQtdlj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "rr3_labels.head()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "output_folder = \"rr3_dataset/preprocessed_images\"\n",
-        "image_folder = \"rr3_dataset/input\""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "m_fQIWjstgh8"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "output_folder = \"rr3_dataset/preprocessed_images\"\n",
+        "image_folder = \"rr3_dataset/input\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.makedirs(output_folder, exist_ok=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "zVL0fm5ZtlYO"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "os.makedirs(output_folder, exist_ok=True)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "image_size = (224, 224)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "xN1Ujv2VtoGF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "image_size = (224, 224)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AReM0LF0ufUi"
+      },
+      "outputs": [],
       "source": [
         "# Example file\n",
         "\n",
@@ -390,18 +400,33 @@
         "\n",
         "plt.imshow(img_array)\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "AReM0LF0ufUi"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iQz3Fo7Du0XD",
+        "outputId": "31676689-9e34-4fce-81f4-421acdf58a46"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "rr3_dataset/input/GLDS-352_SpatialTranscriptomics_NASA-RR3_Sample_158_A1.jpg\n",
+            "rr3_dataset/input/GLDS-352_SpatialTranscriptomics_NASA-RR3_Sample_158_B1.jpg\n",
+            "rr3_dataset/input/GLDS-352_SpatialTranscriptomics_NASA-RR3_Sample_158_C1.jpg\n"
+          ]
+        }
+      ],
       "source": [
         "image_data = []\n",
         "image_labels = []\n",
+        "import cv2\n",
         "\n",
         "for _, row in rr3_labels.iterrows():\n",
         "    file_name = row[\"image_file_path\"]\n",
@@ -412,9 +437,19 @@
         "    if os.path.exists(file_path):\n",
         "        try:\n",
         "            with Image.open(file_path) as img:\n",
-        "                intermediate_size = (img.size[0] // 4, img.size[1] // 4)\n",
-        "                img_intermediate = img.resize(intermediate_size, Image.Resampling.NEAREST)\n",
+        "                img_gray = img.convert(\"L\")\n",
+        "                \n",
+        "                img_array_gray = np.array(img_gray)\n",
         "\n",
+        "                # equalized_img_array = cv2.equalizeHist(img_array_gray) # HISTOGRAM EQUALIZATION\n",
+        "\n",
+        "                clahe = cv2.createCLAHE(clipLimit=2.0, tileGridSize=(8, 8)) # ADAPTIVE HE\n",
+        "                equalized_img_array = clahe.apply(img_array_gray)\n",
+        "\n",
+        "                equalized_img = Image.fromarray(equalized_img_array)\n",
+        "\n",
+        "                intermediate_size = (equalized_img.size[0] // 4, equalized_img.size[1] // 4)\n",
+        "                img_intermediate = equalized_img.resize(intermediate_size, Image.Resampling.NEAREST)\n",
         "                img_resized = img_intermediate.resize(image_size, Image.Resampling.NEAREST)\n",
         "\n",
         "                img_array = np.array(img_resized) / 255.0\n",
@@ -430,30 +465,18 @@
         "\n",
         "        except Exception as e:\n",
         "            print(f\"Error processing {file_name}: {e}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iQz3Fo7Du0XD",
-        "outputId": "31676689-9e34-4fce-81f4-421acdf58a46"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "rr3_dataset/input/GLDS-352_SpatialTranscriptomics_NASA-RR3_Sample_158_A1.jpg\n",
-            "rr3_dataset/input/GLDS-352_SpatialTranscriptomics_NASA-RR3_Sample_158_B1.jpg\n",
-            "rr3_dataset/input/GLDS-352_SpatialTranscriptomics_NASA-RR3_Sample_158_C1.jpg\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KuS7xjbk9CGf"
+      },
+      "outputs": [],
       "source": [
+        "# Alternate method with Dask-Image for resizing and normalization\n",
+        "\n",
         "def process_image(file_path, output_folder, image_size):\n",
         "    print(file_path)\n",
         "    try:\n",
@@ -481,30 +504,41 @@
         "        print(result)\n",
         "    else:\n",
         "        rr3_labels.loc[idx, \"processed_file_path\"] = result"
-      ],
-      "metadata": {
-        "id": "KuS7xjbk9CGf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 20,
       "metadata": {
         "id": "Wq8genxf-zhw"
       },
-      "execution_count": 20,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "qmpfoYNB_A0h"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
